SERVER-15032 enforce 2GB file limit for Javascript files passed to shell